# digikam-doc

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  404.rst  404handler.php  CMakeLists.txt  COPYING  Makefile  README  README.md  Read.me  StaticMessages.sh  TODO  asset_management.rst  batch_queue.rst  bootstrap.sh  bootstrap.tarball  color_management.rst  conf.py  context_menus.rst  credits_license.rst  digital_camera.rst  export_tools.rst  geolocation_editor.rst  get_involved.rst  getting_started.rst  image_editor.rst  import_tools.rst  index.rst  left_sidebar.rst  light_table.rst  main_window.rst  maintenance_tool.rst  maintenance_tools.rst  menu_descriptions.rst  post_processing.rst  right_sidebar.rst  setup_application.rst  setup_dialog.rst  showfoto_editor.rst  (+4 more)
LICENSES/: README
asset_management/: authorship_copyright.rst  dam_overview.rst  dam_workflow.rst  data_corruption.rst  data_protection.rst  organize_find.rst
batch_queue/: base_tools.rst  batchqueue_overview.rst  bqm_workflow.rst  custom_script.rst  dng_converter.rst  metadata_tools.rst  queue_settings.rst  raw_converter.rst  watermark_tool.rst
color_management/: basis_knowledge.rst  camera_profiles.rst  cm_basis.rst  color_management_basis.rst  monitor_profile.rst  monitor_profiles.rst  printer_profiles.rst  raw_treatment.rst  srgb_colorspace.rst  working_space.rst
digikam/: CMakeLists.txt  Makefile.am  README  Shortcuts  TODO  adjustcurves.docbook  adjustlevels.docbook  annexes-credits.docbook  antivignetting.docbook  blackwhite.docbook  blurfx.docbook  border.docbook  bqm-mainwindow.docbook  bqm-rawconverter.docbook  channelmixer.docbook  charcoal.docbook  color-management.docbook  coloreffects.docbook  credits-annex.docbook  crop.docbook  distortionfx.docbook  editor-cm-connection.docbook  editor-cm-definitions.docbook  editor-cm-intro.docbook  editor-cm-monitor.docbook  editor-cm-pcs.docbook  editor-cm-rawfile.docbook  editor-cm-srgb.docbook  editor-cm-wkspace.docbook  editor-cm.docbook  editor-color-auto.docbook  editor-color-bw.docbook  editor-color-correction.docbook  editor-color-curves.docbook  editor-color-levels.docbook  editor-color-mixer.docbook  editor-color-wb.docbook  editor-color.docbook  editor-colormanagement.docbook  editor-decorate-inserttext.docbook  (+161 more)
digikam/digikamimageplugins/: README  adjustcurves.docbook  adjustlevels.docbook  antivignetting.docbook  blowup.docbook  blurfx.docbook  border.docbook  channelmixer.docbook  distortionfx.docbook  emboss.docbook  freerotation.docbook  hotpixels.docbook  index.docbook  infrared.docbook  inpainting.docbook  inserttext.docbook  lensdistortion.docbook  noisereduction.docbook  oilpaint.docbook  perspective.docbook  raindrops.docbook  refocus.docbook  restoration.docbook  sheartool.docbook  superimpose.docbook  texture.docbook  unsharp.docbook  whitebalance.docbook
digikam/project/: README  kde-screenshot-dropshadow.sh
digital_camera/: advanced_import.rst  basic_import.rst  import_overview.rst
export_tools/: box_export.rst  dropbox_export.rst  file_transfer.rst  flickr_export.rst  google_export.rst  image_shack.rst  imgur_export.rst  inaturalist_export.rst  local_export.rst  media_wiki.rst  one_drive.rst  pinterest_export.rst  piwigo_export.rst  remote_export.rst  smugmug_export.rst  twitter_export.rst
geolocation_editor/: geoeditor_coordinates.rst  geoeditor_kmlexport.rst  geoeditor_map.rst  geoeditor_overview.rst  geoeditor_reverse.rst  geoeditor_search.rst
getting_started/: database.rst  database_intro.rst  installation.rst  introduction.rst  quick_start.rst
image_editor/: basic_operations.rst  color_management.rst  colors_tools.rst  decorate_tools.rst  editor_overview.rst  effects_tools.rst  enhancement_tools.rst  raw_processing.rst  raw_workflow.rst  transform_tools.rst  workflow_tools.rst
import_tools/: advanced_import.rst  camera_import.rst  google_import.rst  import_overview.rst  remote_import.rst  scanner_import.rst  smugmug_import.rst
left_sidebar/: albums_view.rst  dates_view.rst  labels_view.rst  mapsearch_view.rst  people_view.rst  search_view.rst  similarity_view.rst  tags_view.rst  timeline_view.rst
light_table/: lighttable_advanced.rst  lighttable_operation.rst  lighttable_overview.rst
main_window/: albums_view.rst  dates_view.rst  image_area.rst  image_view.rst  interface_layout.rst  labels_view.rst  map_view.rst  mapsearch_view.rst  people_view.rst  search_view.rst  similarity_view.rst  tags_view.rst  timeline_view.rst
maintenance_tool/: maintenance_overview.rst
maintenance_tools/: maintenance_autotags.rst  maintenance_common.rst  maintenance_database.rst  maintenance_faces.rst  (+7 more)
(+4699 files in other folders)
